Created FitnessTrackerController and added methods for each button

--- a/src/application/FitnessTrackerView.fxml
+++ b/src/application/FitnessTrackerView.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FitnessTrackerController">
    <children>
-      <Button mnemonicParsing="false" text="NAME" />
+      <Button mnemonicParsing="false" onAction="#openUserProfile" text="NAME" />
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" text="CURRENT DATE" textAlignment="CENTER" />
@@ -16,23 +16,11 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" text="STEPS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#trackSteps" text="STEPS">
                <HBox.margin>
                   <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                </HBox.margin></Button>
-            <Button mnemonicParsing="false" text="SLEEP">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
-               </HBox.margin></Button>
-         </children>
-      </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-         <children>
-            <Button mnemonicParsing="false" text="NUTRITION">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
-               </HBox.margin></Button>
-            <Button mnemonicParsing="false" text="WEIGHT JOUNREY">
+            <Button mnemonicParsing="false" onAction="#trackSleep" text="SLEEP">
                <HBox.margin>
                   <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                </HBox.margin></Button>
@@ -40,16 +28,28 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="ACTIVITIES" />
+            <Button mnemonicParsing="false" onAction="#trackNutrition" text="NUTRITION">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </HBox.margin></Button>
+            <Button mnemonicParsing="false" onAction="#trackWeight" text="WEIGHT JOURNEY">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
+               </HBox.margin></Button>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#trackActivities" text="ACTIVITIES" />
          </children>
       </HBox>
       <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" text="RECCOMENDATIONS">
+            <Button mnemonicParsing="false" onAction="#showRecommendations" text="RECOMMENDATIONS">
                <HBox.margin>
                   <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                </HBox.margin></Button>
-            <Button mnemonicParsing="false" text="GOALS">
+            <Button mnemonicParsing="false" onAction="#setGoals" text="GOALS">
                <HBox.margin>
                   <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                </HBox.margin></Button>
