--- a/src/application/FitnessTrackerUpdateGoals.fxml
+++ b/src/application/FitnessTrackerUpdateGoals.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UpdateUserGoals">
    <children>
       <Label layoutX="87.0" layoutY="267.0" text="SLEEP GOALS:" textFill="#5a59ab">
          <font>
@@ -41,9 +40,9 @@
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <TextField layoutX="261.0" layoutY="181.0" prefHeight="51.0" prefWidth="259.0" />
-      <TextField layoutX="263.0" layoutY="261.0" prefHeight="51.0" prefWidth="254.0" />
-      <Slider layoutX="374.0" layoutY="352.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="28.0" prefWidth="147.0" showTickMarks="true" snapToTicks="true" />
+      <TextField fx:id="updateStepsGoalsTextfield" layoutX="261.0" layoutY="181.0" prefHeight="51.0" prefWidth="259.0" />
+      <TextField fx:id="updateSleepGoalsTextfield" layoutX="263.0" layoutY="261.0" prefHeight="51.0" prefWidth="254.0" />
+      <Slider fx:id="updateWaterGoalsSlider" layoutX="374.0" layoutY="352.0" majorTickUnit="1.0" max="10.0" minorTickCount="0" prefHeight="28.0" prefWidth="147.0" showTickMarks="true" snapToTicks="true" />
       <Label layoutX="81.0" layoutY="455.0" text="What is your weight goal (in kg)?">
          <font>
             <Font size="18.0" />
@@ -59,10 +58,10 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <TextField layoutX="351.0" layoutY="443.0" prefHeight="51.0" prefWidth="152.0" />
-      <TextField layoutX="140.0" layoutY="598.0" prefHeight="25.0" />
-      <TextField layoutX="138.0" layoutY="692.0" />
-      <Button layoutX="197.0" layoutY="766.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #5a59ab;" text="SAVE CHANGES" textFill="WHITE">
+      <TextField fx:id="updateWeightGoalsTextfield" layoutX="351.0" layoutY="443.0" prefHeight="51.0" prefWidth="152.0" />
+      <TextField fx:id="updateExerciseGoalsTextfield" layoutX="140.0" layoutY="598.0" prefHeight="25.0" />
+      <TextField fx:id="updateCaloriesBurnedTextfield" layoutX="138.0" layoutY="692.0" />
+      <Button layoutX="197.0" layoutY="766.0" mnemonicParsing="false" onAction="#saveUserChanges" style="-fx-background-radius: 20; -fx-background-color: #5a59ab;" text="SAVE CHANGES" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
