--- a/src/application/FitnessTrackerGoalsView.fxml
+++ b/src/application/FitnessTrackerGoalsView.fxml
@@ -7,40 +7,40 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserGoalsDisplay">
+<AnchorPane prefHeight="856.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UserGoalsDisplay">
    <children>
-      <Label layoutX="87.0" layoutY="267.0" text="SLEEP GOALS:" textFill="#5a59ab">
+      <Label layoutX="87.0" layoutY="267.0" prefHeight="35.0" prefWidth="164.0" text="SLEEP GOALS:" textFill="LIGHTBLUE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="89.0" layoutY="190.0" text="STEP GOALS:" textFill="#5a59ab">
+      <Label layoutX="89.0" layoutY="190.0" prefHeight="35.0" prefWidth="155.0" text="STEP GOALS:" textFill="LIGHTBLUE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="84.0" layoutY="346.0" text="WATER INTAKE GOALS:" textFill="#5a59ab">
+      <Label layoutX="84.0" layoutY="346.0" prefHeight="35.0" prefWidth="276.0" text="WATER INTAKE GOALS:" textFill="LIGHTBLUE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="83.0" layoutY="412.0" text="NUTRITION GOALS:" textFill="#5a59ab">
+      <Label layoutX="83.0" layoutY="412.0" text="NUTRITION GOALS:" textFill="LIGHTBLUE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Label layoutX="82.0" layoutY="516.0" text="EXERCISE GOALS:" textFill="#5a59ab">
+      <Label layoutX="82.0" layoutY="516.0" text="EXERCISE GOALS:" textFill="LIGHTBLUE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#5a59ab" height="93.0" layoutX="87.0" layoutY="58.0" stroke="BLACK" strokeType="INSIDE" width="435.0" />
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="LIGHTBLUE" height="93.0" layoutX="87.0" layoutY="58.0" stroke="LIGHTBLUE" strokeType="INSIDE" width="435.0" />
       <Label layoutX="143.0" layoutY="86.0" text="HEALTH &amp; FITNESS GOALS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Label layoutX="81.0" layoutY="455.0" text="What is your weight goal (in kg)?">
+      <Label layoutX="81.0" layoutY="455.0" prefHeight="27.0" prefWidth="267.0" text="What is your weight goal (in kg)?">
          <font>
             <Font size="18.0" />
          </font>
@@ -55,21 +55,21 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardButton" layoutX="95.0" layoutY="764.0" mnemonicParsing="false" onAction="#returnToDashboard" style="-fx-background-radius: 20; -fx-background-color: #5a59ab;" text="RETURN TO MAIN" textFill="WHITE">
+      <Button fx:id="homeButton" layoutX="95.0" layoutY="764.0" mnemonicParsing="false" onAction="#returnToMainPage" style="-fx-background-radius: 20; -fx-background-color: LIGHTBLUE;" text="RETURN TO MAIN" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Label fx:id="stepGoalsLabel" layoutX="252.0" layoutY="190.0" prefHeight="35.0" prefWidth="267.0" />
-      <Label fx:id="sleepGoalsLabel" layoutX="255.0" layoutY="267.0" prefHeight="35.0" prefWidth="267.0" />
-      <Label fx:id="waterIntakeGoalsLabel" layoutX="359.0" layoutY="346.0" prefHeight="35.0" prefWidth="217.0" />
-      <Label fx:id="weightGoalsLabel" layoutX="354.0" layoutY="451.0" prefHeight="35.0" prefWidth="217.0" />
-      <Label fx:id="exerciseDurationLabel" layoutX="184.0" layoutY="609.0" prefHeight="35.0" prefWidth="224.0" />
-      <Button fx:id="updateGoalsButton" layoutX="322.0" layoutY="764.0" mnemonicParsing="false" onAction="#modifyFitnessGoals" style="-fx-background-radius: 20; -fx-background-color: #5a59ab;" text="UPDATE GOALS" textFill="WHITE">
+      <Label fx:id="exerciseGoalsLabel" contentDisplay="CENTER" layoutX="184.0" layoutY="609.0" prefHeight="35.0" prefWidth="224.0" />
+      <Button fx:id="updateGoalsButton" layoutX="322.0" layoutY="764.0" mnemonicParsing="false" onAction="#updateFitnessGoals" style="-fx-background-radius: 20; -fx-background-color: LIGHTBLUE;" text="UPDATE GOALS" textFill="WHITE">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Button>
-      <Label fx:id="caloriesBurnedLabel" layoutX="193.0" layoutY="695.0" prefHeight="35.0" prefWidth="224.0" />
+      <Label fx:id="caloriesBurnedGoalsLabel" contentDisplay="CENTER" layoutX="193.0" layoutY="695.0" prefHeight="35.0" prefWidth="224.0" />
+      <Label fx:id="stepGoalsLabel" contentDisplay="CENTER" layoutX="250.0" layoutY="190.0" prefHeight="35.0" prefWidth="267.0" />
+      <Label fx:id="sleepGoalsLabel" contentDisplay="CENTER" layoutX="253.0" layoutY="267.0" prefHeight="35.0" prefWidth="260.0" />
+      <Label fx:id="waterIntakeGoalsLabel" contentDisplay="CENTER" layoutX="364.0" layoutY="346.0" prefHeight="35.0" prefWidth="145.0" />
+      <Label fx:id="weightGoalsLabel" contentDisplay="CENTER" layoutX="355.0" layoutY="451.0" prefHeight="35.0" prefWidth="145.0" />
    </children>
 </AnchorPane>
