--- a/src/application/UserSleepTracker.fxml
+++ b/src/application/UserSleepTracker.fxml
@@ -17,38 +17,39 @@
          <children>
             <StackPane prefHeight="163.0" prefWidth="609.0">
                <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f2f4f7" height="91.0" opacity="0.54" stroke="#ab06f2" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="OUTSIDE" strokeWidth="5.0" width="450.0" />
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="Sleep">
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#6944c5" height="91.0" opacity="0.76" stroke="#6944c5" strokeType="INSIDE" width="450.0" />
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="SLEEP" textFill="WHITE">
                      <font>
-                        <Font name="System Bold" size="54.0" />
+                        <Font name="System Bold" size="50.0" />
                      </font>
                   </Label>
                </children>
             </StackPane>
-            <Label layoutX="20.0" layoutY="260.0" prefHeight="79.0" prefWidth="434.0" text="How long did you sleep?">
+            <TextField fx:id="hoursSleep" layoutX="210.0" layoutY="205.0" />
+            <Label alignment="CENTER" layoutX="34.0" layoutY="185.0" prefHeight="79.0" prefWidth="199.0" text="Hours" textFill="#101010" underline="true">
                <font>
-                  <Font name="System Bold" size="35.0" />
+                  <Font size="35.0" />
                </font>
             </Label>
-            <TextField fx:id="hoursSleep" layoutX="223.0" layoutY="359.0" />
-            <Label alignment="CENTER" layoutX="20.0" layoutY="339.0" prefHeight="79.0" prefWidth="199.0" text="Hours">
+            <Label alignment="CENTER" layoutX="34.0" layoutY="276.0" prefHeight="79.0" prefWidth="199.0" text="Minutes" textFill="#0d0d0d" underline="true">
                <font>
-                  <Font size="38.0" />
+                  <Font size="35.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="20.0" layoutY="408.0" prefHeight="79.0" prefWidth="199.0" text="Minutes">
-               <font>
-                  <Font size="38.0" />
-               </font>
-            </Label>
-            <TextField fx:id="minutesSleep" layoutX="223.0" layoutY="428.0" />
+            <TextField fx:id="minutesSleep" layoutX="210.0" layoutY="296.0" />
             <Label fx:id="sleepProgress" alignment="CENTER" layoutX="20.0" layoutY="561.0" prefHeight="79.0" prefWidth="521.0" text="compared to your goals">
                <font>
                   <Font size="38.0" />
                </font>
             </Label>
-            <Button layoutX="292.0" layoutY="487.0" mnemonicParsing="false" text="update" />
-            <Button layoutX="253.0" layoutY="686.0" onAction ="#returnToMain" mnemonicParsing="false" text="return to main" />
+            <Button layoutX="160.0" layoutY="393.0" mnemonicParsing="false" onAction="#setSleep" prefHeight="70.0" prefWidth="267.0" text="update amount of sleep" textFill="#6945c4">
+               <font>
+                  <Font size="21.0" />
+               </font></Button>
+            <Button layoutX="169.0" layoutY="777.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="65.0" prefWidth="272.0" text="Return to Main" textFill="#6944c5">
+               <font>
+                  <Font size="30.0" />
+               </font></Button>
          </children>
       </Pane>
    </left>
