--- a/src/application/FitnessTrackerActivity.fxml
+++ b/src/application/FitnessTrackerActivity.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
@@ -9,72 +10,50 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<Pane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.FitnessTrackerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ActivitiesController">
    <children>
-      <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" style="-fx-background-color: white;">
-         <top>
-            <Pane prefHeight="258.0" prefWidth="585.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Rectangle arcHeight="20.0" arcWidth="20.0" fill="WHITE" height="170.0" layoutX="64.0" layoutY="51.0" stroke="#ff2727" strokeType="INSIDE" width="481.0">
-                     <effect>
-                        <DropShadow blurType="ONE_PASS_BOX" color="#f80606" />
-                     </effect>
-                  </Rectangle>
-                  <Label layoutX="83.0" layoutY="63.0" text="Recent Activity">
-                     <font>
-                        <Font name="System Bold" size="26.0" />
-                     </font>
-                  </Label>
-                  <ProgressIndicator layoutX="368.0" layoutY="65.0" prefHeight="142.0" prefWidth="126.0" progress="0.0" />
-                  <Label layoutX="83.0" layoutY="112.0" text="Total amount exercised" />
-                  <Label layoutX="83.0" layoutY="158.0" text="Calories burned" />
-               </children>
-            </Pane>
-         </top>
-         <center>
-            <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Button alignment="TOP_LEFT" layoutX="64.0" layoutY="8.0" mnemonicParsing="false" prefHeight="207.0" prefWidth="221.0" style="-fx-background-radius: 20; -fx-background-color: white;" text="Training">
-                     <font>
-                        <Font name="System Bold" size="26.0" />
-                     </font>
-                     <effect>
-                        <DropShadow color="#183480" />
-                     </effect>
-                  </Button>
-                  <Button alignment="TOP_LEFT" layoutX="62.0" layoutY="259.0" mnemonicParsing="false" prefHeight="212.0" prefWidth="486.0" style="-fx-background-radius: 20; -fx-background-color: white;" text="Summary">
-                     <font>
-                        <Font name="System Bold" size="26.0" />
-                     </font>
-                     <effect>
-                        <DropShadow color="#147c2e" />
-                     </effect>
-                  </Button>
-                  <Button alignment="TOP_LEFT" layoutX="321.0" layoutY="8.0" mnemonicParsing="false" prefHeight="207.0" prefWidth="221.0" style="-fx-background-radius: 20; -fx-background-color: white;" text="Progress">
-                     <font>
-                        <Font name="System Bold" size="26.0" />
-                     </font>
-                     <effect>
-                        <DropShadow color="#632383" />
-                     </effect>
-                  </Button>
-                  <Button fx:id="returnToMainButton" layoutX="194.0" layoutY="508.0" mnemonicParsing="false" onAction="#returnToDashboard" style="-fx-background-radius: 20;" text="Return to Main">
-                     <font>
-                        <Font name="System Bold" size="26.0" />
-                     </font>
-                  </Button>
-                  <LineChart layoutX="113.0" layoutY="321.0" prefHeight="123.0" prefWidth="383.0">
-                    <xAxis>
-                      <CategoryAxis side="BOTTOM" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis side="LEFT" />
-                    </yAxis>
-                  </LineChart>
-               </children>
-            </Pane>
-         </center>
-      </BorderPane>
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#6b4191" height="196.0" layoutX="62.0" layoutY="559.0" stroke="#6b4191" strokeType="INSIDE" width="486.0">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+      </Rectangle>
+      <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#3e9acf" height="166.0" layoutX="62.0" layoutY="122.0" stroke="#3e9acf" strokeType="INSIDE" width="486.0">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+      </Rectangle>
+      <Button alignment="BOTTOM_LEFT" layoutX="67.0" layoutY="358.0" mnemonicParsing="false" onAction="#updateWorkouts" prefHeight="138.0" prefWidth="223.0" style="-fx-background-radius: 10; -fx-background-color: #8b3991;" text="Workouts" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+      </Button>
+      <Label layoutX="74.0" layoutY="310.0" text="Start your fitness journey:">
+         <font>
+            <Font name="System Bold" size="26.0" />
+         </font>
+      </Label>
+      <Label layoutX="74.0" layoutY="510.0" text="This is today's progress:">
+         <font>
+            <Font name="System Bold" size="26.0" />
+         </font>
+      </Label>
+      <Button alignment="BOTTOM_LEFT" layoutX="325.0" layoutY="359.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="223.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Stats" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+      </Button>
+      <Label fx:id="currentDateLabel" layoutX="277.0" layoutY="70.0" text="Label" />
+      <Label fx:id="todayExerciseLabel" layoutX="116.0" layoutY="598.0" text="Label" textFill="WHITE" />
+      <Label fx:id="todayExerciseMotivationLabel" layoutX="116.0" layoutY="633.0" text="Label" textFill="WHITE" />
+      <ProgressBar fx:id="workoutProgressBar" layoutX="150.0" layoutY="688.0" prefHeight="36.0" prefWidth="317.0" progress="0.0" />
+      <ImageView fx:id="workoutImage" fitHeight="72.0" fitWidth="70.0" layoutX="81.0" layoutY="378.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="statsImage" fitHeight="72.0" fitWidth="70.0" layoutX="348.0" layoutY="378.0" pickOnBounds="true" preserveRatio="true" />
+      <Button fx:id="returnToMainButton" layoutX="209.0" layoutY="775.0" mnemonicParsing="false" onAction="#returnToDashboard" style="-fx-background-radius: 10;" text="Return to Main" />
    </children>
-</Pane>
+</AnchorPane>
