--- a/src/application/FitnessTrackerView.fxml
+++ b/src/application/FitnessTrackerView.fxml
@@ -102,6 +102,14 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Button>
+            <Button mnemonicParsing="false" onAction="#showUserFitnessGoals" style="-fx-background-color: transparent;" text="Goals" textFill="#5a59ab">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Button>
          </children>
       </HBox>
    </bottom>
