--- a/src/application/UserSleepTracker.fxml
+++ b/src/application/UserSleepTracker.fxml
@@ -17,7 +17,7 @@
          <children>
             <StackPane prefHeight="163.0" prefWidth="609.0">
                <children>
-                  <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#6944c5" height="91.0" opacity="0.76" stroke="#6944c5" strokeType="INSIDE" width="450.0" />
+                  <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#8570d8" height="91.0" opacity="0.76" stroke="#6944c5" strokeType="INSIDE" width="450.0" />
                   <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="233.0" prefWidth="517.0" text="SLEEP" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="50.0" />
@@ -33,10 +33,10 @@
             </Label>
             <Label alignment="CENTER" layoutX="20.0" layoutY="276.0" prefHeight="79.0" prefWidth="199.0" text="MINUTES" textFill="#0d0d0d">
                <font>
-                  <Font size="27.0" />
+                  <Font name="System Bold" size="27.0" />
                </font>
             </Label>
-            <TextField fx:id="minutesSleep" layoutX="210.0" layoutY="296.0" />
+            <TextField fx:id="minutesSleep" layoutX="210.0" layoutY="290.0" />
             <Label fx:id="sleepProgress" alignment="CENTER" layoutX="34.0" layoutY="480.0" prefHeight="219.0" prefWidth="521.0" text="   " textAlignment="CENTER">
                <font>
                   <Font size="24.0" />
@@ -46,10 +46,11 @@
                <font>
                   <Font size="21.0" />
                </font></Button>
-            <Button layoutX="199.0" layoutY="780.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="54.0" prefWidth="211.0" text="Return to Main" textFill="#6944c5">
+            <Button layoutX="199.0" layoutY="780.0" mnemonicParsing="false" onAction="#returnToMain" prefHeight="54.0" prefWidth="211.0" style="-fx-background-radius: 20; -fx-background-color: #8570d8;" text="Return to Main" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font></Button>
+            <ProgressBar fx:id="sleepProgressBar" layoutX="55.0" layoutY="480.0" prefHeight="42.0" prefWidth="340.0" />
          </children>
       </Pane>
    </left>
