--- a/src/application/Recipes.fxml
+++ b/src/application/Recipes.fxml
@@ -8,10 +8,9 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="application.Recipes">
+<AnchorPane prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Recipes">
    <children>
-      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#4d9dd0" height="95.0" layoutX="110.0" layoutY="50.0" stroke="#4d9dd0" strokeType="INSIDE" width="390.0">
+      <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#6b4191" height="95.0" layoutX="110.0" layoutY="50.0" stroke="#6b4191" strokeType="INSIDE" width="390.0">
          <effect>
             <DropShadow color="#00000080" />
          </effect>
@@ -23,31 +22,85 @@
       </Label>
       <Label layoutX="79.0" layoutY="161.0" text="Breakfast">
          <font>
-            <Font name="System Bold" size="26.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
       </Label>
       <Label layoutX="74.0" layoutY="377.0" text="Lunch">
          <font>
-            <Font name="System Bold" size="26.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
       </Label>
       <Label layoutX="69.0" layoutY="595.0" text="Dinner">
          <font>
-            <Font name="System Bold" size="26.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
       </Label>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="199.0" mnemonicParsing="false" onAction="#showBreakfastBurritoRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10;" text="Breakfast Burrito" />
-      <Button layoutX="78.0" layoutY="257.0" mnemonicParsing="false" onAction="#showApplePancakesRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Whole-Wheat Apple Pancakes" />
-      <Button layoutX="77.0" layoutY="314.0" mnemonicParsing="false" onAction="#showBreakfastCasseroleRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Breakfast Casserole" />
-      <Button layoutX="75.0" layoutY="415.0" mnemonicParsing="false" onAction="#showMisoSoupRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Miso Soup" />
-      <Button layoutX="74.0" layoutY="473.0" mnemonicParsing="false" onAction="#showSandwichRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Veggie Club Sandwich" />
-      <Button layoutX="74.0" layoutY="532.0" mnemonicParsing="false" onAction="#showTacosAndSaladRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Chicken Tacos with Avocado Salad" />
-      <Button layoutX="67.0" layoutY="692.0" mnemonicParsing="false" onAction="#showRoastedSalmonRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Maple-Mustard Roasted Salmon" />
-      <Button layoutX="68.0" layoutY="750.0" mnemonicParsing="false" onAction="#showBeefStirFryRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Beef Stir Fry" />
-      <Button layoutX="69.0" layoutY="633.0" mnemonicParsing="false" onAction="#showGrilledChickenRecipe" prefWidth="445.0" style="-fx-background-radius: 10;" text="Grilled Chicken with Avocado Pesto" />
-      <Button layoutX="14.0" layoutY="21.0" mnemonicParsing="false" onAction="#returnToMainPage" text="Go back">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="78.0" layoutY="199.0" mnemonicParsing="false" onAction="#showBreakfastBurritoRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #8b3991;" text="Breakfast Burrito" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
          <font>
-            <Font size="16.0" />
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="78.0" layoutY="257.0" mnemonicParsing="false" onAction="#showApplePancakesRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #8b3991;" text="Whole-Wheat Apple Pancakes" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="77.0" layoutY="314.0" mnemonicParsing="false" onAction="#showBreakfastCasseroleRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #8b3991;" text="Breakfast Casserole" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="75.0" layoutY="415.0" mnemonicParsing="false" onAction="#showMisoSoupRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Miso Soup" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="74.0" layoutY="473.0" mnemonicParsing="false" onAction="#showSandwichRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Veggie Club Sandwich" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="74.0" layoutY="532.0" mnemonicParsing="false" onAction="#showTacosAndSaladRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Chicken Tacos with Avocado Salad" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="67.0" layoutY="692.0" mnemonicParsing="false" onAction="#showRoastedSalmonRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #3e9acf#3e9acf;" text="Maple-Mustard Roasted Salmon" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="68.0" layoutY="750.0" mnemonicParsing="false" onAction="#showBeefStirFryRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #3e9acf;" text="Beef Stir Fry" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="69.0" layoutY="633.0" mnemonicParsing="false" onAction="#showGrilledChickenRecipe" prefHeight="51.0" prefWidth="445.0" style="-fx-background-radius: 10; -fx-background-color: #3e9acf;" text="Grilled Chicken with Avocado Pesto" textFill="WHITE">
+         <effect>
+            <DropShadow color="#00000080" />
+         </effect>
+         <font>
+            <Font size="25.0" />
+         </font></Button>
+      <Button layoutX="14.0" layoutY="7.0" mnemonicParsing="false" onAction="#returnToMainPage" prefHeight="87.0" prefWidth="95.0" style="-fx-background-color: transparent;" text="←">
+         <font>
+            <Font size="41.0" />
          </font>
       </Button>
    </children>
