Made background color white

--- a/src/application/FitnessTrackerActivity.fxml
+++ b/src/application/FitnessTrackerActivity.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ActivitiesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="856.0" prefWidth="609.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ActivitiesController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#6b4191" height="196.0" layoutX="62.0" layoutY="559.0" stroke="#6b4191" strokeType="INSIDE" width="486.0">
          <effect>
