--- a/src/application/FitnessTrackerActivity.fxml
+++ b/src/application/FitnessTrackerActivity.fxml
@@ -40,7 +40,7 @@
             <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Button alignment="BOTTOM_LEFT" layoutX="325.0" layoutY="359.0" mnemonicParsing="false" prefHeight="138.0" prefWidth="223.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Stats" textFill="WHITE">
+      <Button alignment="BOTTOM_LEFT" layoutX="325.0" layoutY="359.0" mnemonicParsing="false" onAction="#showWorkoutStats" prefHeight="138.0" prefWidth="223.0" style="-fx-background-radius: 10; -fx-background-color: #b8409c;" text="Stats" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
